%% MonkeyShop 数据库 ER 图
%% 展示所有实体、字段、关系
erDiagram
    USER {
        BIGINT id PK "自增主键"
        VARCHAR username UK "用户名 (唯一)"
        VARCHAR password "BCrypt 加密密码"
        VARCHAR phone "手机号"
        VARCHAR avatar "头像路径"
        DATETIME create_time "注册时间"
    }

    ADMIN {
        BIGINT id PK "自增主键"
        VARCHAR username UK "管理员名 (唯一)"
        VARCHAR password "BCrypt 加密密码"
        VARCHAR nickname "昵称"
        DATETIME create_time "创建时间"
    }

    MONKEY {
        BIGINT id PK "自增主键"
        VARCHAR name "商品名称"
        VARCHAR breed "品种"
        DECIMAL price "价格"
        VARCHAR description "描述"
        VARCHAR imageUrl "图片路径"
        INT stock "库存"
    }

    ORDERS {
        BIGINT id PK "自增主键"
        VARCHAR orderNo UK "订单号 (唯一)"
        BIGINT userId FK "买家 ID"
        VARCHAR buyerName "买家用户名快照"
        VARCHAR buyerAvatar "买家头像快照"
        VARCHAR productName "商品名称快照"
        VARCHAR productImage "商品图片快照"
        DECIMAL price "商品价格快照"
        VARCHAR description "商品描述快照"
        VARCHAR receiverName "收货人快照"
        VARCHAR receiverPhone "收货电话快照"
        VARCHAR addressSnapshot "收货地址快照"
        INT status "订单状态 0-6"
        DATETIME shippingTime "发货时间"
        DATETIME create_time "下单时间"
    }

    ADDRESS {
        BIGINT id PK "自增主键"
        BIGINT userId FK "所属用户 ID"
        VARCHAR receiverName "收货人姓名"
        VARCHAR phone "收货电话"
        VARCHAR detailAddress "详细地址"
        BOOLEAN isDefault "是否默认"
    }

    VISIT_LOG {
        BIGINT id PK "自增主键"
        DATETIME visitTime "访问时间"
        VARCHAR ipAddress "访问者 IP"
    }

    USER ||--o{ ORDERS : "1:N 下单"
    USER ||--o{ ADDRESS : "1:N 拥有地址"
    MONKEY ||--o{ ORDERS : "1:N 被购买"
